Dashboard sans grafik

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -4,8 +4,10 @@
   align-items: center;
   margin-top: 200px;
 
-  .mock,
-  .api {
+  .mock12,
+  .api12,
+  .mock18,
+  .api18 {
     cursor: pointer;
     border: none;
     border-radius: 3px;
