--- a/src/styles/components/_verticalNavbar.scss
+++ b/src/styles/components/_verticalNavbar.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
+  color: black;
+  margin-top: 300px;
   .logoVerticalNavbar {
     width: 64px;
     height: 64px;
