--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,5 @@
 @import "./components/header";
 @import "./components/verticalNavbar";
 @import "./components/home";
-@import "./components/horizontalInfos";
+@import "./components/verticalInfos";
+@import "./components/dashboard";
