--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,3 +1,51 @@
+.dashboard {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  .bonjour {
+    text-align: left;
+    font-family: Roboto;
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: start;
+  }
+
+  .name {
+    color: red;
+  }
+  .nameAndGrafiks {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.otherGrafiks {
+  .radar,
+  .pie,
+  .line {
+    height: 263px;
+    width: 258px;
+    border-radius: 5px;
+  }
+}
+
 .grafiksAndInfos {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grafiksBar {
+  align-items: center;
+  justify-content: center;
+}
+
+.bar {
+  display: flex;
+  height: 320px;
+  width: 835px;
+  background: #fbfbfb;
+  border-radius: 5px;
 }
