--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,8 +1,6 @@
 .header {
   display: flex;
   background-color: #020203;
-  height: 91px;
-  align-items: center;
 
   .logo {
     height: 60px;
@@ -10,10 +8,21 @@
     left: 28px;
     top: 18px;
   }
-
-  .navbarTitles {
-    display: flex;
-    justify-content: space-around;
-    color: #fff;
-  }
+}
+.navbarTitles {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  align-items: center;
+  height: 24px;
+  width: 994px;
+  left: 355px;
+  top: 36px;
+  border-radius: 0px;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
 }
