--- a/src/styles/components/_verticalNavbar.scss
+++ b/src/styles/components/_verticalNavbar.scss
@@ -4,6 +4,7 @@
   justify-content: space-around;
   color: black;
   margin-top: 300px;
+  width: 64px;
   .logoVerticalNavbar {
     width: 64px;
     height: 64px;
