--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -5,8 +5,8 @@
   .logo {
     height: 60px;
     width: 177px;
-    left: 28px;
-    top: 18px;
+    margin-left: 28px;
+    margin-top: 18px;
   }
 }
 .navbarTitles {
@@ -16,8 +16,8 @@
   align-items: center;
   height: 24px;
   width: 994px;
-  left: 355px;
-  top: 36px;
+  margin-left: 200px;
+  margin-top: 36px;
   border-radius: 0px;
   font-family: Roboto;
   font-size: 24px;
