--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -9,6 +9,7 @@
     line-height: 24px;
     letter-spacing: 0px;
     text-align: start;
+    margin-left: 20px;
   }
 
   .name {
@@ -22,6 +23,7 @@
     line-height: 24px;
     letter-spacing: 0px;
     text-align: left;
+    margin-left: 20px;
   }
 
   .nameAndGrafiks {
