--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,4 @@
 @import "./components/home";
 @import "./components/verticalInfos";
 @import "./components/dashboard";
+@import "./components/grafiks";
