--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,13 +1,8 @@
 .home {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 200px;
+  height: 100vh;
 
-  .mock12,
-  .api12,
-  .mock18,
-  .api18 {
+  .mock {
     cursor: pointer;
     border: none;
     border-radius: 3px;
@@ -17,5 +12,15 @@
     padding: 20px;
     font-size: 24px;
     font-weight: 700;
+  }
+
+  .homeBtn {
+    display: flex;
+    align-items: center;
+  }
+
+  .getUser {
+    display: flex;
+    justify-content: center;
   }
 }
