--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -10,6 +10,7 @@
     letter-spacing: 0px;
     text-align: start;
     margin-left: 20px;
+    margin-bottom: 20px;
   }
 
   .name {
@@ -24,17 +25,19 @@
     letter-spacing: 0px;
     text-align: left;
     margin-left: 20px;
+    margin-bottom: 30px;
   }
 
   .nameAndGrafiks {
     display: flex;
     flex-direction: column;
-    margin-left: 60px;
+    margin-left: 80px;
   }
 
   .grafiksAndInfos {
     display: flex;
     justify-content: space-between;
+    margin-top: 60px;
   }
 
   .grafiksBar {
@@ -45,5 +48,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 20px;
   }
 }
