--- a/src/styles/components/_grafiks.scss
+++ b/src/styles/components/_grafiks.scss
@@ -5,6 +5,7 @@
   left: 0px;
   top: 0px;
   border-radius: 5px;
+  margin-top: 40px;
 
   .grafikLine,
   .grafikRadar,
@@ -34,6 +35,7 @@
         width: 147px;
         color: #fff;
         opacity: 0.5;
+        margin-top: 2px;
       }
     }
   }
