--- a/src/styles/components/_verticalInfos.scss
+++ b/src/styles/components/_verticalInfos.scss
@@ -1,6 +1,7 @@
 .infosCount {
   width: 250px;
   height: 622px;
+  margin-left: 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,9 +16,6 @@
     border-radius: 5px;
     margin: 0px;
   }
-  // h2 {
-  //   padding: 15px;
-  // }
   .blueImg,
   .redImg,
   .yellowImg,
