--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:wght@400;500;700&display=swap");
+@media all and (min-width: 1200px) {
+  body {
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+    margin: auto;
+    min-width: 1024px;
+  }
 
-body {
-  font-family: "Roboto", sans-serif;
-  margin: auto;
-}
-
-li {
-  list-style: none;
+  li {
+    list-style: none;
+  }
 }
