--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,4 @@
 @import "./components/verticalInfos";
 @import "./components/dashboard";
 @import "./components/grafiks";
+@import "./components/notFound";
