réglage erreur API score vs todayScore dans mainData

--- a/src/styles/components/_grafiks.scss
+++ b/src/styles/components/_grafiks.scss
@@ -164,7 +164,7 @@
     width: 39px;
     height: 63px;
     padding: 5px;
-    background-color: #ff0000;
+    background-color: #e60000;
     color: #fff;
     font-family: "Roboto";
     font-size: 10px;
